--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "id": "a6pF_cib-SD_"
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "4 2021-06-03  056984  36533    4      0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "Length: 183, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "4  050093    0416     3.92"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "Length: 21149, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "[180 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
        "[21149 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -854,6 +854,31 @@
        " ('K04033', 4): 0,\n",
        " ('K04033', 5): 0,\n",
        " ('K04033', 6): 0,\n",
+       " ('K62716', 1): 0,\n",
+       " ('K62716', 2): 0,\n",
+       " ('K62716', 3): 0,\n",
+       " ('K62716', 5): 0,\n",
+       " ('K62716', 6): 0,\n",
+       " ('K04031', 2): 0,\n",
+       " ('K04031', 3): 0,\n",
+       " ('K04031', 4): 0,\n",
+       " ('K04031', 5): 0,\n",
+       " ('K04031', 6): 0,\n",
+       " ('K04037', 1): 0,\n",
+       " ('K04037', 3): 0,\n",
+       " ('K04037', 4): 0,\n",
+       " ('K04037', 5): 0,\n",
+       " ('K04037', 6): 0,\n",
+       " ('K04101', 1): 0,\n",
+       " ('K04101', 2): 0,\n",
+       " ('K04101', 4): 0,\n",
+       " ('K04101', 5): 0,\n",
+       " ('K04101', 6): 0,\n",
+       " ('K57386', 1): 0,\n",
+       " ('K57386', 2): 0,\n",
+       " ('K57386', 3): 0,\n",
+       " ('K57386', 4): 0,\n",
+       " ('K57386', 5): 0,\n",
        " ('K61088', 1): 0,\n",
        " ('K61088', 2): 0,\n",
        " ('K61088', 4): 0,\n",
@@ -864,54 +889,29 @@
        " ('K57791', 3): 0,\n",
        " ('K57791', 4): 0,\n",
        " ('K57791', 5): 0,\n",
-       " ('K61606', 1): 0,\n",
-       " ('K61606', 2): 0,\n",
-       " ('K61606', 3): 0,\n",
-       " ('K61606', 5): 0,\n",
-       " ('K61606', 6): 0,\n",
-       " ('K62330', 1): 0,\n",
-       " ('K62330', 2): 0,\n",
-       " ('K62330', 3): 0,\n",
-       " ('K62330', 4): 0,\n",
-       " ('K62330', 6): 0,\n",
-       " ('K04037', 1): 0,\n",
-       " ('K04037', 3): 0,\n",
-       " ('K04037', 4): 0,\n",
-       " ('K04037', 5): 0,\n",
-       " ('K04037', 6): 0,\n",
-       " ('K62716', 1): 0,\n",
-       " ('K62716', 2): 0,\n",
-       " ('K62716', 3): 0,\n",
-       " ('K62716', 5): 0,\n",
-       " ('K62716', 6): 0,\n",
-       " ('K57386', 1): 0,\n",
-       " ('K57386', 2): 0,\n",
-       " ('K57386', 3): 0,\n",
-       " ('K57386', 4): 0,\n",
-       " ('K57386', 5): 0,\n",
-       " ('K04031', 2): 0,\n",
-       " ('K04031', 3): 0,\n",
-       " ('K04031', 4): 0,\n",
-       " ('K04031', 5): 0,\n",
-       " ('K04031', 6): 0,\n",
        " ('K04046', 1): 0,\n",
        " ('K04046', 3): 0,\n",
        " ('K04046', 4): 0,\n",
        " ('K04046', 5): 0,\n",
        " ('K04046', 6): 0,\n",
-       " ('K04101', 1): 0,\n",
-       " ('K04101', 2): 0,\n",
-       " ('K04101', 4): 0,\n",
-       " ('K04101', 5): 0,\n",
-       " ('K04101', 6): 0,\n",
+       " ('K62330', 1): 0,\n",
+       " ('K62330', 2): 0,\n",
+       " ('K62330', 3): 0,\n",
+       " ('K62330', 4): 0,\n",
+       " ('K62330', 6): 0,\n",
        " ('K61218', 1): 0,\n",
        " ('K61218', 2): 0,\n",
        " ('K61218', 3): 0,\n",
        " ('K61218', 4): 0,\n",
-       " ('K61218', 6): 0}"
+       " ('K61218', 6): 0,\n",
+       " ('K61606', 1): 0,\n",
+       " ('K61606', 2): 0,\n",
+       " ('K61606', 3): 0,\n",
+       " ('K61606', 5): 0,\n",
+       " ('K61606', 6): 0}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "7  machine_info | capacity (float)  0.000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
        "[183 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
        "[21151 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1451,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
        "42 2021-06-15  K03115  26719   28      0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1634,7 @@
        "43 2021-06-15  K03115  26719       0   58"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
        "max    481190.000000    1.000000  716.000000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1750,7 +1750,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>machine</th>\n",
+       "      <th>capacity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>21149</td>\n",
+       "      <td>21149</td>\n",
+       "      <td>21149.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>6617</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2835.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>K04673</td>\n",
+       "      <td>0424</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1953</td>\n",
+       "      <td>364.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          item machine  capacity\n",
+       "count    21149   21149   21149.0\n",
+       "unique    6617      37    2835.0\n",
+       "top     K04673    0424       2.0\n",
+       "freq        20    1953     364.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "machine_info.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3992,7 +4069,7 @@
    "provenance": []
   },
   "interpreter": {
-   "hash": "4cd7ab41f5fca4b9b44701077e38c5ffd31fe66a6cab21e0214b68d958d0e462"
+   "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 64-bit",
