--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -124,17 +124,17 @@
     "# file read\n",
     "df_raw = pd.read_excel('생산미결리스트 등 샘플데이터.xlsx', sheet_name=None)\n",
     "machine_info = df_raw['CYCLETIME'][1:].reset_index(drop=True)\n",
-    "item_info = df_raw['생산미결리스트(for cost)'].reset_index(drop=True)\n",
+    "order_info = df_raw['생산미결리스트(for cost)'].reset_index(drop=True)\n",
     "\n",
     "# 전처리 (1) coulmn name 변경\n",
-    "item_info = item_info.rename(columns={\n",
+    "order_info = order_info.rename(columns={\n",
     "    '영업납기':'date',\n",
     "    '중산도면': 'item',\n",
     "    '단가': 'cost',\n",
     "    '수량' :'qty',\n",
     "    '선급': 'urgent'\n",
     "})\n",
-    "item_info = item_info[['date', 'item', 'cost', 'qty', 'urgent']]\n",
+    "order_info = order_info[['date', 'item', 'cost', 'qty', 'urgent']]\n",
     "\n",
     "machine_info = machine_info.rename(columns={\n",
     "    'JSDWG':'item',\n",
@@ -145,10 +145,10 @@
     "\n",
     "\n",
     "# 전처리 (2) 분석을 위한 데이터 처리\n",
-    "item_info['urgent'] = item_info['urgent'].fillna(0)\n",
-    "for i in range(len(item_info)):\n",
-    "    if item_info.loc[i, 'urgent']!=0:\n",
-    "        item_info.loc[i, 'urgent'] = 1\n",
+    "order_info['urgent'] = order_info['urgent'].fillna(0)\n",
+    "for i in range(len(order_info)):\n",
+    "    if order_info.loc[i, 'urgent']!=0:\n",
+    "        order_info.loc[i, 'urgent'] = 1\n",
     "\n"
    ]
   },
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "item_info.head()"
+    "order_info.head()"
    ]
   },
   {
@@ -277,7 +277,7 @@
     }
    ],
    "source": [
-    "item_info.value_counts()"
+    "order_info.value_counts()"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "source": [
     "# 1. 완전성 (Completeness)\n",
     "perc = 30\n",
-    "df_set = {'item_info':item_info, 'machine_info':machine_info}\n",
+    "df_set = {'order_info':order_info, 'machine_info':machine_info}\n",
     "for df_name in list(df_set):\n",
     "    print(f'DataFrame name: {df_name}')\n",
     "    df = df_set[df_name]\n",
@@ -514,7 +514,7 @@
    "source": [
     "# 2. 유일성 (Uniqueness)\n",
     "\n",
-    "check_unique = item_info[\n",
+    "check_unique = order_info[\n",
     "    ['date', 'item', 'urgent']\n",
     "    ].value_counts().reset_index()\n",
     "perc_check_unique_item_urgent_info = round(\n",
@@ -671,7 +671,7 @@
     }
    ],
    "source": [
-    "check_unique = item_info[\n",
+    "check_unique = order_info[\n",
     "    ['date', 'item', 'urgent']\n",
     "    ].value_counts().reset_index()\n",
     "check_unique"
@@ -945,8 +945,8 @@
    "source": [
     "# 3. 유효성 (Validity)\n",
     "\n",
-    "print('item_info case')\n",
-    "df = item_info\n",
+    "print('order_info case')\n",
+    "df = order_info\n",
     "c_lb = df['cost'] >= 0\n",
     "c_ub = df['cost'] <= 1000000\n",
     "q_lb = df['qty'] >= 0\n",
@@ -979,7 +979,7 @@
     "    ]\n",
     "vald_len = len(vald_df)\n",
     "item_vald = vald_len/len(df)*100\n",
-    "print(\"item_info 유효성 지수 : %.2f%% \"%(item_vald)) \n",
+    "print(\"order_info 유효성 지수 : %.2f%% \"%(item_vald)) \n",
     "\n",
     "print('machine_info case')\n",
     "df = machine_info\n",
@@ -1109,16 +1109,16 @@
     "# 데이터 형식 확인\n",
     "print('[Step 2] 데이터 형식을 벗어나는 데이터 수')\n",
     "check_validity = []\n",
-    "check = len(item_info) - sum(item_info['date'].apply(lambda x: isinstance(x, datetime.datetime)))\n",
-    "check_validity.append(['item_info | date (datetime)', check])\n",
-    "check = len(item_info) - sum(item_info['item'].apply(lambda x: isinstance(x, str)))\n",
-    "check_validity.append(['item_info | item (str)', check])\n",
-    "check = len(item_info) - sum(item_info['cost'].apply(lambda x: isinstance(x, int)))\n",
-    "check_validity.append(['item_info | cost (int)', check])\n",
-    "check = len(item_info) - sum(item_info['qty'].apply(lambda x: isinstance(x, int)))\n",
-    "check_validity.append(['item_info | qty (int)', check])\n",
-    "check = len(item_info) - sum(item_info['urgent'].apply(lambda x: isinstance(x, int)))\n",
-    "check_validity.append(['item_info | urgent (int)', check])\n",
+    "check = len(order_info) - sum(order_info['date'].apply(lambda x: isinstance(x, datetime.datetime)))\n",
+    "check_validity.append(['order_info | date (datetime)', check])\n",
+    "check = len(order_info) - sum(order_info['item'].apply(lambda x: isinstance(x, str)))\n",
+    "check_validity.append(['order_info | item (str)', check])\n",
+    "check = len(order_info) - sum(order_info['cost'].apply(lambda x: isinstance(x, int)))\n",
+    "check_validity.append(['order_info | cost (int)', check])\n",
+    "check = len(order_info) - sum(order_info['qty'].apply(lambda x: isinstance(x, int)))\n",
+    "check_validity.append(['order_info | qty (int)', check])\n",
+    "check = len(order_info) - sum(order_info['urgent'].apply(lambda x: isinstance(x, int)))\n",
+    "check_validity.append(['order_info | urgent (int)', check])\n",
     "\n",
     "check = round(\n",
     "    ( len(machine_info)- sum(machine_info['item'].apply(lambda x: isinstance(x, str))\n",
@@ -1262,7 +1262,7 @@
    ],
    "source": [
     "# 4. 일관성 \n",
-    "df = item_info\n",
+    "df = order_info\n",
     "vald_df = df[['item']].copy()\n",
     "vald_df['check'] = vald_df['item'].isin(set(machine_info['item']))\n",
     "print(\"일관성 지수 : %.2f%% \"%(sum(vald_df['check'])/len(df)*100)) \n",
@@ -1427,11 +1427,11 @@
     "n_after_preprocess = len(machine_info)\n",
     "print(f'Machine_info : nan 값 제거 ({n_before_preprocess} row --> {n_after_preprocess} row, {round(((n_before_preprocess-n_after_preprocess)/n_before_preprocess*100), 3)}% 삭제)')\n",
     "\n",
-    "n_before_preprocess = len(item_info)\n",
-    "item_info = item_info[['date', 'item', 'cost', 'qty', 'urgent']]\n",
-    "item_info.dropna(axis=0, inplace=True)\n",
-    "n_after_preprocess = len(item_info)\n",
-    "print(f'Item_info : nan 값 제거 ({n_before_preprocess} row --> {n_after_preprocess} row, {round(((n_before_preprocess-n_after_preprocess)/n_before_preprocess*100), 3)}% 삭제)')\n"
+    "n_before_preprocess = len(order_info)\n",
+    "order_info = order_info[['date', 'item', 'cost', 'qty', 'urgent']]\n",
+    "order_info.dropna(axis=0, inplace=True)\n",
+    "n_after_preprocess = len(order_info)\n",
+    "print(f'order_info : nan 값 제거 ({n_before_preprocess} row --> {n_after_preprocess} row, {round(((n_before_preprocess-n_after_preprocess)/n_before_preprocess*100), 3)}% 삭제)')\n"
    ]
   },
   {
@@ -1457,7 +1457,7 @@
     }
    ],
    "source": [
-    "item_info[['date', 'item', 'cost']].value_counts().head()\n"
+    "order_info[['date', 'item', 'cost']].value_counts().head()\n"
    ]
   },
   {
@@ -1484,7 +1484,7 @@
    ],
    "source": [
     "# unique 처리\n",
-    "item_info[['date', 'item', 'cost', 'urgent']].value_counts().head()\n"
+    "order_info[['date', 'item', 'cost', 'urgent']].value_counts().head()\n"
    ]
   },
   {
@@ -1553,7 +1553,7 @@
     }
    ],
    "source": [
-    "item_info[(item_info['date']=='2021-06-15')&(item_info['item']=='K03115')]"
+    "order_info[(order_info['date']=='2021-06-15')&(order_info['item']=='K03115')]"
    ]
   },
   {
@@ -1579,8 +1579,8 @@
     }
    ],
    "source": [
-    "item_info = item_info.groupby(['date', 'item', 'cost', 'urgent']).sum().reset_index()\n",
-    "item_info[['date', 'item']].value_counts().head()\n"
+    "order_info = order_info.groupby(['date', 'item', 'cost', 'urgent']).sum().reset_index()\n",
+    "order_info[['date', 'item']].value_counts().head()\n"
    ]
   },
   {
@@ -1640,7 +1640,7 @@
     }
    ],
    "source": [
-    "item_info[(item_info['date']=='2021-06-15')&(item_info['item']=='K03115')]"
+    "order_info[(order_info['date']=='2021-06-15')&(order_info['item']=='K03115')]"
    ]
   },
   {
@@ -1745,7 +1745,7 @@
     }
    ],
    "source": [
-    "item_info.describe()"
+    "order_info.describe()"
    ]
   },
   {
@@ -1859,16 +1859,16 @@
     "    '2021-09-01',    \n",
     "]\n",
     "for i in range(len(date_start)-1):\n",
-    "    check_df = item_info[\n",
-    "        (item_info['date'] >date_start[i])\n",
-    "        &(item_info['date'] <date_start[i+1])\n",
+    "    check_df = order_info[\n",
+    "        (order_info['date'] >date_start[i])\n",
+    "        &(order_info['date'] <date_start[i+1])\n",
     "        ]\n",
     "    print(f'{date_start[i]} ~ {date_start[i+1]}생산 주문 건 수: {len(check_df)}')\n",
     "\n",
     "# 7월 주문 해보기\n",
-    "filtered_item_info = item_info[\n",
-    "    (item_info['date'] > '2021-01-01')\n",
-    "    &(item_info['date'] < '2021-06-01')\n",
+    "filtered_order_info = order_info[\n",
+    "    (order_info['date'] > '2021-01-01')\n",
+    "    &(order_info['date'] < '2021-06-01')\n",
     "    ]\n"
    ]
   },
@@ -2046,7 +2046,7 @@
     }
    ],
    "source": [
-    "filtered_item_info"
+    "filtered_order_info"
    ]
   },
   {
@@ -2082,7 +2082,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.merge(filtered_item_info, machine_info, on='item', how='inner')\n",
+    "dataset = pd.merge(filtered_order_info, machine_info, on='item', how='inner')\n",
     "dataset.to_csv('dataset.csv', index=False)\n"
    ]
   },
