--- a/생산계획최적화_notebook.ipynb
+++ b/생산계획최적화_notebook.ipynb
@@ -41,14 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# file read\n",
     "machine_info = pd.read_csv('machine_info.csv')\n",
     "order_info = pd.read_csv('order_info.csv')\n",
-    "\n",
     "# 전처리 (1) coulmn name 변경\n",
     "order_info = order_info.rename(columns={\n",
     "    '영업납기':'date',\n",
@@ -65,6 +64,207 @@
     "    'AVG_CT': 'capacity' \n",
     "})\n",
     "machine_info = machine_info[['item', 'machine', 'capacity']]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>machine</th>\n",
+       "      <th>capacity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>21149.000000</td>\n",
+       "      <td>21151.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>420.686132</td>\n",
+       "      <td>10.441903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12.071250</td>\n",
+       "      <td>18.304675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>401.000000</td>\n",
+       "      <td>0.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>409.000000</td>\n",
+       "      <td>3.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>424.000000</td>\n",
+       "      <td>5.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>433.000000</td>\n",
+       "      <td>10.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>442.000000</td>\n",
+       "      <td>930.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            machine      capacity\n",
+       "count  21149.000000  21151.000000\n",
+       "mean     420.686132     10.441903\n",
+       "std       12.071250     18.304675\n",
+       "min      401.000000      0.050000\n",
+       "25%      409.000000      3.200000\n",
+       "50%      424.000000      5.500000\n",
+       "75%      433.000000     10.500000\n",
+       "max      442.000000    930.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "machine_info.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cost</th>\n",
+       "      <th>qty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>127.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>45204.133858</td>\n",
+       "      <td>114.110236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>81277.077503</td>\n",
+       "      <td>140.706450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2990.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>11551.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>21160.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>35816.500000</td>\n",
+       "      <td>169.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>481190.000000</td>\n",
+       "      <td>716.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                cost         qty\n",
+       "count     127.000000  127.000000\n",
+       "mean    45204.133858  114.110236\n",
+       "std     81277.077503  140.706450\n",
+       "min      2990.000000    2.000000\n",
+       "25%     11551.000000   20.000000\n",
+       "50%     21160.000000   48.000000\n",
+       "75%     35816.500000  169.000000\n",
+       "max    481190.000000  716.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order_info.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "# 전처리 (2) 분석을 위한 데이터 처리\n",
